# github-sman

./: CLAUDE.md  README.md  pyproject.toml
src/sman/: __init__.py  __main__.py  app.py  cli.py  config.py  git_status.py  local_repo.py
src/sman/github/: activity.py  cache.py  client.py  issues.py  persistent_cache.py  repos.py  stats.py
src/sman/screens/: help.py  home.py  reports.py  repos.py  settings.py
src/sman/styles/: app.tcss
src/sman/widgets/: date_range.py  org_switcher.py  repo_table.py  report_table.py
tests/: conftest.py  test_cache.py  test_config.py  test_git_status.py  test_github_client.py  test_local_repo.py  test_persistent_cache.py
