[project]
name = "github-sman"
version = "0.1.0"
description = "GitHub textual-based simple management CLI"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0.0",
    "PyGithub>=2.0.0",
    "tomli_w>=1.0.0",
    "humanize>=4.0.0",
]

[project.scripts]
sman = "sman.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sman"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
